fixed some spacing shit

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -109,12 +109,16 @@
 	padding-right: 1%;	
 	padding-bottom: 5%;
 	width: 100%;
-	margin: -8px;
+	margin-left: -8px;
+	margin-right: -15px;
+	margin-top: -2%;
+	margin-bottom: -2%;
 }
 .textcontent2 p{
 	color: #000;
 	padding-left: 8%;
 	padding-right: 8%;
+
 	width: 50%;
 	margin: auto;
 	line-height: 2.5em;
